fix spacing

--- a/pages-content/home/featureScreen/slider/slider.module.scss
+++ b/pages-content/home/featureScreen/slider/slider.module.scss
@@ -75,7 +75,7 @@
 
     .content__text {
       position: relative;
-      max-width: rem(322);
+      max-width: rem(330);
       margin-top: rem(44);
 
       p {
